# otto

./: .env  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  Otto.g4  OttoLexer.g4  Ottofile  Procfile  README.adoc  dredd.yml  eventbus.yml  jest.config.js  package-lock.json  package.json  parse-test.js  system.dot  tsconfig.base.json  tslint.json
.cargo/: config
.github/workflows/: rust.yml
agent/: Cargo.toml
agent/src/: control.rs  lib.rs  main.rs  step.rs
agents/: README.adoc
agents/basic-native/: Cargo.toml
agents/basic-native/src/: main.rs  manifest.rs
agents/node-basic/: package-lock.json  package.json  tsconfig.json
agents/node-basic/src/: agent.ts  logger.ts
agents/primitive/: Cargo.toml
agents/primitive/src/: main.rs
agents/rust-basic/: Cargo.toml  README.adoc
agents/rust-basic/src/: main.rs  manifest.rs
apispec/: eventbus.yml  orchestrator.yml
auctioneer/: Cargo.toml
auctioneer/src/: main.rs
bus/: Cargo.toml
cli/: README.adoc
cli/agent/: Cargo.toml
cli/agent/src/: main.rs
cli/osp/: Cargo.toml  README.adoc
cli/osp/src/: main.rs
config/: custom-environment-variables.yml  default.yml
crates/: README.adoc
crates/agent/: Cargo.toml  README.adoc
crates/agent/src/: control.rs  lib.rs  step.rs
crates/models/: Cargo.toml  README.adoc
crates/models/src/: config.rs  lib.rs  osp.rs
crates/parser/: Cargo.toml  README.adoc
crates/parser/src/: lib.rs  pipeline.pest
crates/parser/test_data/valid/: 00_pipeline_block.otto  92_orphan_steps_and_stages.otto
data-store/: Cargo.toml
demo/config/: object-store.yml  orchestrator.yml  otto.yml
demo/config/projects.d/: hello-world.yml
docs/: Developing_Services.adoc  Writing_Steps.adoc
eventbus/: Cargo.toml  README.adoc
eventbus-api/: Cargo.toml  README.md
eventbus-api/api/: swagger.yaml
eventbus-api/examples/: client.rs  server.rs
eventbus-api/src/: lib.rs
eventbus-api/src/client/: mod.rs
eventbus-api/src/server/: auth.rs  mod.rs
eventbus-cli/: Cargo.toml
eventbus-cli/src/: main.rs
eventbus-inmemory/: Cargo.toml
eventbus-inmemory/src/: lib.rs  main.rs
eventbus-inmemory/tests/: common.rs  register-subscribe.rs  simple-exchange.rs
eventbus/api/: Cargo.toml  README.md
eventbus/api/api/: swagger.yaml
eventbus/api/examples/: client.rs
eventbus/api/examples/server_lib/: mod.rs  server.rs
eventbus/api/src/: lib.rs  mimetypes.rs  models.rs
eventbus/api/src/client/: mod.rs
eventbus/api/src/server/: mod.rs
eventbus/server/: Cargo.toml
eventbus/server/src/: lib.rs  main.rs  server.rs
eventbus/src/: bus.rs  cli.rs  client.rs  lib.rs  main.rs  msg.rs  server.rs
eventbus/src/cli/: main.rs
eventbus/src/server/: connection.rs  eventbus.rs  main.rs
eventbus/src/servers/: inmemory.rs
eventbus/static/: eventbus.yml
eventbus/templates/: index.html
examples/: matrix.otto  rubygem.blueprint  rubygem.otto.draft  webapp.otto
examples/common/slack/: slack.otto
grammar/: Makefile  Otto.g4  OttoLexer.g4  README.adoc  utils.ts
grammar/__tests__/: configure.ts  pipeline.ts  use.ts
lib/src/: logger.ts  server.ts
meeting-notes/2020-11/: 2020-11-07-pipeline-syntax-discussion.adoc
migrations/sqlite/: 20210303191923_projects.sql
models/: Cargo.toml
models/src/: lib.rs
orchestrator/: index.js  package-lock.json  package.json
orchestrator/api/: Cargo.toml  README.md
orchestrator/api/api/: swagger.yaml
orchestrator/api/examples/: client.rs  server.rs
orchestrator/api/examples/server_lib/: mod.rs  server.rs
orchestrator/api/src/: lib.rs  mimetypes.rs  models.rs
orchestrator/api/src/client/: mod.rs
orchestrator/api/src/server/: mod.rs
osp/: Cargo.toml
osp/src/: lib.rs  main.rs
parser/: Cargo.toml
parser/src/: lib.rs  pipeline.pest
parser/test_data/invalid/: 01_missing_steps.otto
parser/test_data/valid/: 00_simple.otto  00_simple_kwargs.otto
processors/: README.adoc
processors/travis-ci/: Cargo.toml  example.internal.yml  example.yml
processors/travis-ci/src/: main.rs
rfc/: 0001-otto-systems-design.adoc  0002-execution-manifest.adoc  0003-resource-auctioning.adoc  0005-json-over-http.adoc  0010-eventbus.adoc  0011-step-library-format.adoc  README.adoc  template.adoc
scripts/: local-run  prereqs.sh  swagger-codegen  swagger-ui
services/auctioneer/: Cargo.toml
services/auctioneer/src/: main.rs
services/eventbus/: Cargo.toml
services/eventbus/src/: lib.rs
services/eventbus/static/: eventbus.yml
services/local-orchestrator/: Cargo.toml  README.adoc  apispec.yml
services/local-orchestrator/src/: main.rs
services/object-store/: Cargo.toml  README.adoc
services/object-store/src/: lib.rs  main.rs
services/orchestrator/: README.adoc
services/orchestrator/src/: index.ts
services/parser/: Cargo.toml  README.adoc  apispec.yml
services/parser/__tests__/: Orf.ts  ParseListener.ts
services/parser/src/: FileCapture.ts  Orf.ts  ParseListener.ts  Runtime.ts  Stage.ts  Step.ts  lib.rs  main.rs  pipeline.pest
services/parser/test_data/valid/: 00_multiple_stages.otto  00_simple.otto  00_simple_kwargs.otto  91_orphan_steps.otto
services/parser/tests/: valid.rs
services/reldata/: Cargo.toml  README.adoc
services/reldata/src/: main.rs
stdlib/archive/: Cargo.toml  README.adoc  manifest.yml
stdlib/archive/src/: main.rs
stdlib/archive/tests/: invalid_cases.sh  valid_cases.sh
stdlib/dir/: Cargo.toml  README.adoc  manifest.yml
stdlib/dir/src/: main.rs
stdlib/echo/: README.adoc  echo-step  manifest.yml
stdlib/error/: Cargo.toml  README.adoc  error-step  manifest.yml
stdlib/error/src/: main.rs
stdlib/git/: Cargo.toml  README.adoc  manifest.yml
stdlib/git/src/: main.rs
stdlib/git/tests/: simple.sh
stdlib/sh/: Cargo.toml  README.adoc  manifest.yml
stdlib/sh/src/: main.rs
stdlib/unarchive/: Cargo.toml  README.adoc  manifest.yml
stdlib/unarchive/src/: main.rs
