[workspace]

members = [
    "cli/agent",
    "cli/osp",

    "crates/agent",
    "crates/models",

    "services/auctioneer",
    "services/eventbus",
    "services/local-orchestrator",
    "services/object-store",
    "services/parser",

    "stdlib/archive",
    "stdlib/dir",
    "stdlib/error",
    "stdlib/git",
    "stdlib/sh",
    "stdlib/unarchive",
]

# Re-enable when closer to cutting actual releases, otherwise it's not worth
# the compile-time slowdown
#[profile.release]
#panic = "abort"
#lto = true
#codegen-units = 1
#incremental = false
#opt-level = "z"
