[package]
name = "otto-agent"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[lib]
name = "otto_agent"
path = "src/lib.rs"

[[bin]]
name = "otto-agent"
path = "src/main.rs"

[dependencies]
async-std = { version = "~1.7", features = ["attributes"]}
log = "~0.4.8"
otto-models = { path = "../models" }
osp = { path = "../osp" }
os_pipe = "~0.9.2"
pretty_env_logger = "~0.4.0"
serde_json = "~1.0.59"
# Needed for reading manifest yamls
serde_yaml = "~0.8.13"
serde = {version = "~1.0.117", features = ["rc", "derive"]}
tempfile = "~3.1.0"
tide = "~0.14.0"
url = "~2.2.0"
uuid = { version = "~0.8.1", features = ["v4", "serde"]}
