[package]
name = "otto-auctioneer"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
# Handling command line options
#clap = { version = "~2.33.0", features = ["yaml"] }
# Handling configuration overlays
config = { version = "~0.10.1", features = ["yaml"] }

# Logging
log = "~0.4.8"
pretty_env_logger = "~0.3.1"

# Adding the "rc" feature so we can serialize/deserialize Arc<T> and Rc<T>
serde = { version = "~1.0.104", features = ["rc"] }
serde_derive = "~1.0.104"
serde_json = "~1.0.0"

otto-eventbus = { path = "../eventbus" }

bastion = { git = "https://github.com/bastion-rs/bastion.git", branch = "master" }
tungstenite = "0.9.2"
url = "2.1.0"

num_cpus = "1.11.1"
