[package]
name = "otto-auctioneer"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
# Needed for the actor system
actix = "~0.9.0"
actix-http = "~1.0.1"
actix-rt = "~1.0.0"
actix-web = "~2.0.0"
# Used for the websocket client
actix-codec = "~0.2.0"
actix-web-actors = "~2.0.0"
awc = "~1.0.1"
futures = "~0.3.1"
bytes = "~0.5.3"

# Handling command line options
clap = { version = "~2.33.0", features = ["yaml"] }
# Handling configuration overlays
config = { version = "~0.10.1", features = ["yaml"] }

# Logging
log = "~0.4.8"
pretty_env_logger = "~0.3.1"

# Adding the "rc" feature so we can serialize/deserialize Arc<T> and Rc<T>
serde = { version = "~1.0.103", features = ["rc"] }
serde_json = "~1.0.0"

otto-eventbus = { path = "../eventbus" }
