[package]
name = "otto-eventbus"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[[bin]]
name = "otto-eventbus"
path = "src/server/main.rs"

[[bin]]
name = "otto-ebc"
path = "src/cli/main.rs"

[dependencies]
warp = { version = "~0.2.0", features = ["websocket"] }
tokio = { version = "~0.2", features = ["full"] }

handlebars = "~2.0.2"
# Need to embed static resources into the binary for serving at runtime
rust-embed = { version = "~5.2.0", features = ["interpolate-folder-path"] }

# Used for formatting times in messages
chrono = { version = "~0.4.10", features = ["serde"] }

# Handling command line options
clap = { version = "~2.33.0", features = ["yaml"] }
# Handling configuration overlays
config = { version = "~0.10.1", features = ["yaml"] }

# Logging
log = "~0.4.8"
pretty_env_logger = "~0.3.1"

# Adding the "rc" feature so we can serialize/deserialize Arc<T> and Rc<T>
serde = { version = "~1.0.103", features = ["rc"] }
serde_json = "~1.0.0"

# Needed for the nice bits in the cli
rustyline = "~5.0.6"


[dev-dependencies]
regex = "1"
