[package]
name = "otto-eventbus"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[[bin]]
name = "otto-bus-inmemory"
path = "src/servers/inmemory.rs"

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
# Used for managing the websocket channels
async-tungstenite = { version = "~0.5.0", features = ["async-std"] }
# Used for formatting times in messages
chrono = { version = "~0.4.10", features = ["serde"] }
# Handling command line options
clap = { version = "~2.33.0", features = ["yaml"] }
# Handling configuration overlays
config = { version = "~0.10.1", features = ["yaml"] }
# Used for fast in-memory hashmaps
dashmap = "~3.11.4"
futures = "~0.3.5"
# Logging
log = "~0.4.8"
# WebSocket message exchange support
meows = "~0.1.1"
pretty_env_logger = "~0.3.1"
# Needed for the nice bits in the cli
rustyline = "~5.0.6"
serde = { version = "~1.0.111", features = ["rc"] }
serde_derive = "~1.0.106"
serde_json = "~1.0.53"
smol = "~0.1.12"
# Library used for implementing HTTP APIs
tide = "~0.11.0"

[dev-dependencies]
regex = "1"
smol = "~0.1.12"
