[package]
name = "otto-parser"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[lib]
name = "otto_parser"
path = "src/lib.rs"

[[bin]]
name = "otto-parser"
path = "src/main.rs"

[dependencies]
async-std = { version = "1.6.5", features = ["attributes"]}
log = "~0.4.11"
otto-models = { path = "../models" }
pest = "~2.1.3"
pest_derive = "~2.1.0"
pretty_env_logger = "~0.4.0"
serde_yaml = "~0.8.13"
tide = "~0.14.0"
