[package]
name = "osp"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[[bin]]
name = "osp"
path = "src/main.rs"

[dependencies]
flate2 = "1"
gumdrop = "0.8"
otto-models = { path = "../../crates/models" }
serde_yaml = "0.8"
serde = {version = "1", features = ["rc", "derive"]}
tar = "0.4"
