[package]
name = "otto-agent"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
async-std = { version = "1", features = ["attributes"]}
log = "0.4"
os_pipe = "0.9"
otto-models = { path = "../../crates/models" }
serde_json = "1"
# Needed for reading manifest yamls
serde_yaml = "0.8"
serde = {version = "1", features = ["rc", "derive"]}
tempfile = "3"
tide = "0.16"
url = "2"
uuid = { version = "0.8", features = ["v4", "serde"]}
