[package]
name = "otto-auctioneer"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
# Handling command line options
clap = { version = "~2.33.0", features = ["yaml"] }
# Handling configuration overlays
config = { version = "~0.10.1", features = ["yaml"] }
# Logging
log = "0.4"
otto-eventbus = { path = "../eventbus" }
pretty_env_logger = "0.4"
# Adding the "rc" feature so we can serialize/deserialize Arc<T> and Rc<T>
serde = { version = "1", features = ["rc"] }
serde_json = "1"
