[package]
name = "otto-local-orchestrator"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
async-std = { version = "~1.7", features = ["attributes"]}
log = "~0.4.11"
otto-agent = { path = "../../crates/agent" }
otto-models = { path = "../../crates/models" }
pretty_env_logger = "~0.4.0"
serde = {version = "~1.0.117", features = ["rc", "derive"]}
serde_json = "~1.0.59"
tempfile = "~3.1.0"
tide = "~0.15.0"
uuid = { version = "~0.8.1", features = ["v4", "serde"]}
