[package]
name = "otto-local-orchestrator"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
async-std = { version = "1", features = ["attributes"]}
log = "0.4"
os_pipe = "0.9"
otto-agent = { path = "../../crates/agent" }
otto-models = { path = "../../crates/models" }
pretty_env_logger = "0.4"
serde = {version = "1", features = ["rc", "derive"]}
serde_json = "1"
tempfile = "3"
tide = "0.16"
uuid = { version = "0.8", features = ["v4", "serde"]}
