[package]
name = "otto-object-store"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[lib]
name = "otto_objectstore"
path = "src/lib.rs"

[[bin]]
name = "otto-object-store"
path = "src/main.rs"


[dependencies]
async-std = { version = "~1.6.5", features = ["attributes"]}
log = "~0.4.11"
pretty_env_logger = "~0.4.0"
tide = "~0.14.0"
