[package]
name = "otto-parser-service"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[[bin]]
name = "otto-parser"
path = "src/main.rs"

[dependencies]
async-std = { version = "1", features = ["attributes"]}
log = "0.4"
otto-models = { path = "../../crates/models" }
otto-parser = { path = "../../crates/parser" }
pretty_env_logger = "0.4"
serde_json = "1"
tide = "0.16"
uuid = { version = "0.8", features = ["v4", "serde"]}
