[package]
name = "git-step"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
git2 = "0.16"
otto-agent = { path = "../../crates/agent" }
serde = {version = "1", features = ["derive"]}
url = "2"
# Used for managing the cached reference directories
sha2 = "0.9"
