[package]
name = "unarchive-step"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
async-std = { version = "1", features = ["attributes"] }
otto-agent = { path = "../../crates/agent" }
serde = {version = "1", features = ["derive"]}
surf = { version = "2", features = ["h1-client"]}
